--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 body {
   background-image: url(NotePaper.png);
   background-repeat: no-repeat;
-  background-position: 50% 40%;
+  background-position: center top;
   height: 100%;
   width: 561px;
   margin-left: auto;
@@ -18,6 +18,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   display: 100%;
+  margin-top: 62px;
   /*margin: 62px 50px;*/
 }
 
